--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -12,7 +12,7 @@
   - if automatic_discount_code.present? && session[:email_reminder_promo] != 'scheduled_for_delivery'
     .auto-discount-applied
       .text-center
-        p WANT TO SHOP 15% OFF LATER?
+        p WANT TO SHOP LATER?
         = link_to 'Email your promo code', fb_auth_path(email_reminder_promo: automatic_discount_code), class: 'btn btn-facebook btn-md'
   /  .banner-top#promoSent
       center
