--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -67,8 +67,9 @@
   @extend .alert-sale;
   width:100%;
   background-color: #000000;
-  padding: 5px;
+  padding: 5px 0 15px;
   p {
     color: #ffffff;
+    margin-bottom: 5px;
   }
 }
