--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -15,5 +15,5 @@
         p WANT TO SHOP LATER?
         = link_to 'Email your promo code', fb_auth_path(email_reminder_promo: automatic_discount_code), class: 'btn btn-facebook btn-md'
   /  .banner-top#promoSent
-      center
-        | Your promo code has been sent to the email attached to your Facebook account. <b>ENJOY!</b>
+  /    center
+  /      | Your promo code has been sent to the email attached to your Facebook account. <b>ENJOY!</b>
