Fix /dresses link

--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -39,7 +39,7 @@
 
   .row
     p style="margin-top:20px; margin-bottom:20px;"
-      = link_to image_tag("#{asset_path}/shopalldresses.jpg"), "http://www.fameandpartners.com/lookbook/dresses", class: "landing-page-bohemium"
+      = link_to image_tag("#{asset_path}/shopalldresses.jpg"), "http://www.fameandpartners.com/dresses", class: "landing-page-bohemium"
 
   .row
     = link_to image_tag("#{asset_path}/collection.jpg"), @bottom_collection_link, class: "landing-page-bohemium"
