[bugfix] font bug for ios
i fix font bug for ios

--- a/app/assets/transient_content/20150724_instagram/stylesheets/20150724_instagram_modal.css.scss
+++ b/app/assets/transient_content/20150724_instagram/stylesheets/20150724_instagram_modal.css.scss
@@ -66,7 +66,7 @@
         }
 
         #justForYou {
-          font-family: -webkit-pictograph;
+          font-family: serif;
           font-weight: 400;
           font-size:   1.5em;
         }
