--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -68,6 +68,7 @@
   width:100%;
   background-color: #000000;
   padding: 5px 0 15px;
+  z-index: 101;
   p {
     color: #ffffff;
     margin-bottom: 5px;
