fix explicit set script type

--- a/app/views/shared/_hotjar.html.erb
+++ b/app/views/shared/_hotjar.html.erb
@@ -1,5 +1,5 @@
 <!-- Hotjar Tracking Code for www.fameandpartners.com -->
-<script>
+<script type="text/javascript">
 (function(f,b){
 var c;
 f.hj=f.hj||function(){(f.hj.q=f.hj.q||[]).push(arguments)};
