--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -78,7 +78,7 @@
     <%= render :partial => 'spree/shared/customerio' %>
   <% end %>
 
-  <script>(function() {
+  <script type="text/javascript">(function() {
    var _fbq = window._fbq || (window._fbq = []);
    if (!_fbq.loaded) {
      var fbds = document.createElement('script');
