--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -5,15 +5,15 @@
     _gaq.push(['_trackPageview']);
 
     <% if flash[:track_fb_reminder_promo] %>
-      _gaq.push(['_trackEvent', 'Facebook', 'Redeem'])
+      _gaq.push(['_trackEvent', 'Facebook', 'Redeem']);
     <% end %>
 
     <% if flash[:track_fb_signin] %>
-      _gaq.push(['_trackEvent', 'Facebook', 'SignIn'])
+      _gaq.push(['_trackEvent', 'Facebook', 'SignIn']);
     <% end %>
 
     <% if flash[:track_fb_signup] %>
-      _gaq.push(['_trackEvent', 'Facebook', 'SignUp'])
+      _gaq.push(['_trackEvent', 'Facebook', 'SignUp']);
     <% end %>
 
     <% if flash[:commerce_tracking] || params[:force_tracking] && @spree_order.present? %>
