[bugfix] fix modal not close
i fix modal not close on ios

--- a/app/views/modals/_modal_20150724_instagram_notify.html.slim
+++ b/app/views/modals/_modal_20150724_instagram_notify.html.slim
@@ -24,7 +24,7 @@ javascript:
     h2#heySister HEY SISTER. HERE'S 15% OFF,
     p#justForYou JUST FOR YOU.
     div
-      input#keepBrowsing type='button' value='KEEP BROWSING' onclick="$('.vex-dialog-button-secondary').click();"
+      input#keepBrowsing value='KEEP BROWSING' onclick="$('.vex-dialog-button-secondary').click();"
     div
       span#discountMessage
         | (Your discount will be automatically applied to your cart.)
