--- a/app/assets/transient_content/20150724_instagram/stylesheets/20150724_instagram_modal.css.scss
+++ b/app/assets/transient_content/20150724_instagram/stylesheets/20150724_instagram_modal.css.scss
@@ -46,6 +46,7 @@
           background-color: black;
           font-size:        12pt;
           font-weight:      500;
+          text-align: center;
         }
 
         #modalPromoFooter {
