--- a/app/assets/stylesheets/redesign/product/_product.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product.css.scss
@@ -44,10 +44,13 @@
 
 @media(max-width: 767px){
 	.screen-height {
-    @media(max-height: 959px){
+    @media(max-height: 666px){
 		  height:90vh;
     }
-    @media(min-height: 959px){
+    @media(min-height: 667px)and(max-height: 959px){
+      height:91vh;
+    }
+    @media(min-height: 960px){
       height:94vh;
     }
 	}
