[feat] rotate arrow when hover/show locale options

--- a/app/views/layouts/redesign/header/locale_selector/_mobile.html.slim
+++ b/app/views/layouts/redesign/header/locale_selector/_mobile.html.slim
@@ -1,7 +1,7 @@
 coffee:
   $ ->
     $('#locale-selector-mobile-container').on 'click', ->
-      $(this).children('ul').toggleClass('show')
+      $(this).toggleClass('show-options')
 
 #locale-selector-mobile-container.visible-xs.visible-sm
   #locale-selector-label
