--- a/app/assets/stylesheets/redesign/header/locale_selector.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_selector.css.scss
@@ -13,6 +13,14 @@
   width: $arrow-width;
 }
 
+@mixin transform($transforms) {
+     -moz-transform: $transforms;
+       -o-transform: $transforms;
+      -ms-transform: $transforms;
+  -webkit-transform: $transforms;
+          transform: $transforms;
+}
+
 // Desktop
 #gray-top-banner {
   background-color: $gray-light-bg;
@@ -52,8 +60,14 @@
       padding-right: 20px;
       position: relative;
 
-      &:hover ul {
-        display: block;
+      &:hover {
+        ul {
+          display: block;
+        }
+
+        .arrow {
+          @include transform(rotate(180deg));
+        }
       }
 
       .arrow {
@@ -127,6 +141,16 @@
     margin-bottom: -1px;
   }
 
+  &.show-options {
+    ul {
+      display: block;
+    }
+
+    .arrow {
+      @include transform(rotate(180deg));
+    }
+  }
+
   #locale-selector-label {
     display: inline-block;
     margin-left: -25px;
@@ -156,10 +180,6 @@
     position: absolute;
     text-align: center;
     width: 100%;
-
-    &.show {
-      display: block;
-    }
 
     li {
       cursor: pointer;
