[feat] first version locale warn
refactor site version controller

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1,3 +1,7 @@
+/////////// locale warn //////////
+
+@import 'redesign/header/locale_warn';
+
 /////////// locale selector //////////
 
 @import 'redesign/header/locale_selector';
