--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -67,6 +67,7 @@ ruby:
 
     .nav-menu.nav-alert-top
       .container-fluid.nav-menu-container
+        = render 'layouts/redesign/header/locale_warn/base'
         = render 'layouts/redesign/header/gray_top_banner/base'
 
         #masthead-container
