--- a/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_form.css.scss
+++ b/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_form.css.scss
@@ -66,6 +66,9 @@ textarea.form-control {
 .btn-primary {
   color: #fff;
   background-color: #000;
+  &:hover, &:active, &:focus {
+    background-color: $pink-bg;
+  }
 }
 .btn-facebook {
   background-color: #3b5998;
