--- a/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_vars.css.scss
+++ b/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_vars.css.scss
@@ -28,3 +28,10 @@ $quiz-form-control-bg-focus: transparent;
 $quiz-form-width: 370px;
 // @end Form
 // -----------------
+
+// Responsive breakpoints 
+$quiz-screen-tablet: 800px;
+$quiz-screen-tablet-mini: 600px;
+$quiz-screen-phone: 480px;
+// @end Responsive breakpoints
+// -----------------
