--- a/engines/style_quiz/app/views/style_quiz/questions/color_palette.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/color_palette.html.slim
@@ -1,8 +1,9 @@
 / Question 2/11
 .quiz-section id="#{ question.name }-question"
   .quiz-section-title
-    h4.quiz-section-number Question #{ question_position }/#{ question_total }
-    h2 Build your colour palette.
+    .grid-container
+      h4.quiz-section-number Question #{ question_position }/#{ question_total }
+      h2 Build your colour palette.
   .grid-container
     / Hair
     .quiz-catalog.text-center.hair
