--- a/engines/style_quiz/app/views/style_quiz/questions/fashion_importance.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/fashion_importance.html.slim
@@ -1,15 +1,17 @@
 / Question 8/11
 .quiz-section id="#{ question.name }-question"
   .quiz-section-title.quiz-section-title-grey
-    h4.quiz-section-number Question #{ question_position }/#{ question_total }
-    h2 How important is fashion to you?
-    h4.font-family-secondary.text-uppercase - CLICK ON THE SCALE, FROM LEAST IMPORTANT TO VERY IMPORTANT
+    .grid-container
+      h4.quiz-section-number Question #{ question_position }/#{ question_total }
+      h2 How important is fashion to you?
+      h4.font-family-secondary.text-uppercase - CLICK ON THE SCALE, FROM LEAST IMPORTANT TO VERY IMPORTANT
   .grid-container
-    .rank-fasion.rank-box
-      - question.answers.each do |answer|
-        .rank-cell data-value=(answer.id) class=( @user_style_profile.selected?(answer) ? 'selected' : '' )
-          .checkmark.checkmark-lg
-          .rank-item class="rank-fasion-item-#{ answer.value } "
+    .rank-box-wrapper
+      .rank-fasion.rank-box
+        - question.answers.each do |answer|
+          .rank-cell data-value=(answer.id) class=( @user_style_profile.selected?(answer) ? 'selected' : '' )
+            / .checkmark.checkmark-lg
+            .rank-item class="rank-fasion-item-#{ answer.value } "
     .row
       .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
       .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
