--- a/engines/style_quiz/app/views/style_quiz/questions/red_carpet_style.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/red_carpet_style.html.slim
@@ -1,13 +1,14 @@
 / Question 7/11
 .quiz-section id="#{ question.name }-question"
   .quiz-section-title.quiz-section-title-blue
-    h4.quiz-section-number Question #{ question_position }/#{ question_total }
-    h2 You’re walking the red carpet!
-    h3.font-family-secondary.text-uppercase WHICH DRESS WOULD YOU WEAR?
-    h4.font-family-secondary.text-uppercase - SELECT AS MANY AS YOU LIKE
+    .grid-container
+      h4.quiz-section-number Question #{ question_position }/#{ question_total }
+      h2 You’re walking the red carpet!
+      h3.font-family-secondary.text-uppercase WHICH DRESS WOULD YOU WEAR?
+      h4.font-family-secondary.text-uppercase - SELECT AS MANY AS YOU LIKE
   .grid-container
     .quiz-catalog
-      .row
+      .row.dress-style-wrapper
         - question.answers.each do |answer|
           .col-2.dress-style class=(@user_style_profile.selected?(answer) ? 'selected' : '') data-value=(answer.id)
             .quiz-catalog-picture 
