fix select text color

--- a/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_base.css.scss
+++ b/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_base.css.scss
@@ -5,6 +5,7 @@ body {
   font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: 1.4;
+  color: $text-color;
 }
 
 img {
@@ -36,6 +37,11 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 50000s ease-in-out 0s;
 }
+
+select {
+  color: $text-color;
+  font-weight: 400;
+} 
 
 [data-action*="import-from-fb"] {
   cursor: pointer;
