--- a/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_vars.css.scss
+++ b/engines/style_quiz/app/assets/stylesheets/style_quiz/partials/_vars.css.scss
@@ -15,6 +15,7 @@ $quiz-grid-gutter-compact: 0;
 
 // Colors
 // - bg
+$text-color: #000;
 $grey-bg: #f5f5f5;
 $peach-bg: #f6e2d5;
 $blue-bg: #003647;
