[feat][style quiz login popup] login popup & style quiz ability to login

--- a/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
@@ -25,3 +25,6 @@ form.quiz-section id="#{ question.name }-question"
             h2 Import my details from Facebook.
             span.btn
               span.fa.fa-facebook
+            br
+            span.btn
+              = link_to 'Login', new_spree_user_session_path, data: { action: 'login' }
