--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -73,4 +73,17 @@
     color: #ffffff;
     margin-bottom: 5px;
   }
+  .close-banner{
+    float:right;
+    position: absolute;
+    right: 10px;
+    a {
+      color: white;
+      cursor:pointer;
+    }
+  }
+}
+
+.displayForever{
+  display: none !important;
 }
