--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -18,6 +18,17 @@
     right: 10px;
   }
 }
+.vex-dialog-center {
+  text-align: center;
+  &:before {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+    width: 1px;
+    margin-left: -1px;
+  }
+}
 
 // Bottom
 .vex-dialog-bottom {
@@ -103,14 +114,18 @@
 // -----------------
 
 // Tmp style for old Style Quiz
-.vex-dialog-quiz {
-  .vex-content {
-    padding: 0;
-    width: 1100px;
-    height: 680px;
-  }
-}
+// .vex-dialog-quiz {
+//   .vex-content {
+//     padding: 0;
+//     width: 1100px;
+//     height: 680px;
+//   }
+// }
 // @end Tmp style for old Style Quiz
+// -----------------
+
+// Form Dialog 
+// @end Form Dialog
 // -----------------
 
 .vex-theme-flat-attack.email-capture-modal {
