[feat][style quiz] store user answer on-fly

--- a/engines/style_quiz/app/views/style_quiz/user_profiles/edit.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/user_profiles/edit.html.slim
@@ -16,6 +16,7 @@ ruby:
       questions_data: questions_data,
       current: #{ current.to_i },
       action: '#{ style_quiz.user_profile_path }',
+      quiz_path: '#{ style_quiz.root_path }',
       show_mode: '#{ current.present? ? "unfinished" : "all" }',
       settings: {
         dateFormat: '#{ raw I18n.t('date_format.frontend', default: "dd/mm/yy") }',
