--- a/app/views/spree/admin/general_settings/edit.html.erb
+++ b/app/views/spree/admin/general_settings/edit.html.erb
@@ -47,7 +47,7 @@
             <legend align="center">Store Location Warn (Black banner above the menu)</legend>
 
             <% @site_versions.each do |site_version| %>
-              <% warn = LocaleWarn.new(site_version) %>
+              <% warn = Preferences::LocaleWarn.new(site_version) %>
               <legend align="left"><%= site_version.name %></legend>
               <div class="field">
                 <label>Warn text</label>
