--- a/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
@@ -25,5 +25,6 @@ form.quiz-section id="#{ question.name }-question"
             h2 Import my details from Facebook.
             .btn.btn-facebook 
               ' &nbsp;
-            .or or
-            = link_to 'Login', new_spree_user_session_path, data: { action: 'login' }, class: 'btn btn-primary btn-login'
+            - unless spree_user_signed_in?
+              .or or
+              = link_to 'Login', new_spree_user_session_path, data: { action: 'login' }, class: 'btn btn-primary btn-login'
